--- a/recipes/beefmacaroni.html
+++ b/recipes/beefmacaroni.html
@@ -4,4 +4,11 @@
         <meta charset="UTF-8">
         <title>Beef and Macaroni</title>
     </head>
+    <body>
+        <h1>Beef and Macaroni</h1>
+        <img src="https://www.simplyrecipes.com/thmb/O2-v8_hxlFR35nmH5udh8It0d2k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Hamburger-and-Macaroni-LEAD-01-bb45d144bbe64ca5a0bb15783ed6b204.jpg"
+        target="_blank" rel="noopener norefferer">
+        <p><strong>Images are for illustration purposes only.</strong></p>
+        <a href="../index.html"> Return to Main Page </a>
+    </body>
 </html>
