--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
         <p>Are you in a rush to go to work everyday?</p>
         <p>Are you tired of eating boring old sandwiches?</p>
         <p>Are you finding it hard to balance your nutrition goals with your 9-5?</p>
-        <p>Look no further. Here are some high protein recipes that you can prepare in less than 2 hours that will save your
-            time, appetite, and money.
-        </p>
-        <h2><a href="./recipes/beefmacaroni.html">Beef Macaroni</a></h2>
-        <h2><a href="./recipes/islandricebowl.html">Island Rice Bowl</a></h2>
-        <h2><a href="./recipes/steaknpotato.html">Steak and Potatoes</a></h2>
+        <p>Meal Prep Doesn't have to be boring! </p>
+        <p> Here are some high protein recipes that you can prepare in less than 2 hours that will save you time and money. </p>
+        <img src="https://media.tenor.com/18CbNzRW_FkAAAAM/smile-happy.gif" target="_blank" rel ="noopener norefferer">
+        <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CJKHOK4DGFTT4JQZO2VHWU36WE.jpg&w=1200"
+                target = "_blank" rel ="noopener norefferer" height="220">
+        <h2>List of Recipes</h2>
+        <ul>
+            <li><a href="./recipes/beefmacaroni.html">Beef Macaroni</a></li>
+            <li><a href="./recipes/islandricebowl.html">Island Rice Bowl</a></li>
+            <li><a href="./recipes/steaknpotato.html">Steak and Potatoes</a></li>
+        </ul>
     </body>
 </html>
