Populate Beef and Macaroni recipe page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <p>Are you tired of eating boring old sandwiches?</p>
         <p>Are you finding it hard to balance your nutrition goals with your 9-5?</p>
         <p>Meal Prep Doesn't have to be boring! </p>
-        <p> Here are some high protein recipes that you can prepare in less than 2 hours that will save you time and money. </p>
+        <p>Here are some high protein recipes that you can prepare in less than 2 hours that will save you time and money. </p>
+        <p>These recipes were designed to be dairy and nut free!</p>
         <img src="https://media.tenor.com/18CbNzRW_FkAAAAM/smile-happy.gif" target="_blank" rel ="noopener norefferer">
         <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CJKHOK4DGFTT4JQZO2VHWU36WE.jpg&w=1200"
                 target = "_blank" rel ="noopener norefferer" height="220">
