--- a/recipes/beefmacaroni.html
+++ b/recipes/beefmacaroni.html
@@ -7,8 +7,40 @@
     <body>
         <h1>Beef and Macaroni</h1>
         <img src="https://www.simplyrecipes.com/thmb/O2-v8_hxlFR35nmH5udh8It0d2k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Hamburger-and-Macaroni-LEAD-01-bb45d144bbe64ca5a0bb15783ed6b204.jpg"
-        target="_blank" rel="noopener norefferer">
+        target="_blank" rel="noopener norefferer" height ="400" alt="Beef and Macaroni Dish">
         <p><strong>Images are for illustration purposes only.</strong></p>
+        <h2>Description</h2>
+        <p>What's up with all these meal prep recipes that call for mac and cheese? Ditch the dairy and make this delicious Beef and Macaroni instead.</p>
+        <p>Each serving contains around 850 calories and 60 grams of protein.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1.5 lbs Lean Ground Beef (15% or lower)</li>
+            <li>1 lb dry macaroni</li>
+        </ul>
+        <p>To Taste:</p>
+        <ul>
+            <li>Onion</li>
+            <li>Garlic</li>
+            <li>Bell Pepper</li>
+            <li>Oil</li>
+            <li>Tomato Paste</li>
+            <li>Chili Powder</li>
+            <li>Salt and Pepper</li>
+            <li>Whatever Other Seasonings You Want :)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Start by heating a pot of salted water in preparation for your macaroni.</li>
+            <li>While the water comes up to a boil, dice up your Onion, Garlic, and Bell Pepper.</li>
+            <li>Add your diced vegetables into a preheated and oiled cast iron pan.</li>
+            <li>While your vegetables are cooking, add your pasta into the boiling water.</li>
+            <li>Once the vegetables become clarified, add in your ground beef.</li>
+            <li>As the beef is cooking, add in tomato paste to taste and add in your chili powder, salt and pepper, and other seasonings of your choice.</li>
+            <li>Take the macaroni off of the heat when it is slightly undercooked. It will finish cooking once you reheat it.</li>
+            <li>Take your beef off of the heat, and mix it with the pasta.</li>
+            <li>Distribute into five equal servings and enjoy!</li>
+        </ol>
+        <p>This meal lasts for up to four days in the fridge, and can be frozen. To reheat, microwave it for 2-3 minutes.</p>
         <a href="../index.html"> Return to Main Page </a>
     </body>
 </html>
