Populate Island Rice Bowl recipe page

--- a/recipes/beefmacaroni.html
+++ b/recipes/beefmacaroni.html
@@ -14,7 +14,7 @@
         <p>Each serving contains around 850 calories and 60 grams of protein.</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>1.5 lbs Lean Ground Beef (15% or lower)</li>
+            <li>3 lbs Lean Ground Beef (15% or lower)</li>
             <li>1 lb dry macaroni</li>
         </ul>
         <p>To Taste:</p>
@@ -30,9 +30,9 @@
         </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Start by heating a pot of salted water in preparation for your macaroni.</li>
+            <li>Start by heating a pot of salted water at high heat in preparation for your macaroni.</li>
             <li>While the water comes up to a boil, dice up your Onion, Garlic, and Bell Pepper.</li>
-            <li>Add your diced vegetables into a preheated and oiled cast iron pan.</li>
+            <li>Add your diced vegetables into a preheated and oiled cast iron pan at medium high heat.</li>
             <li>While your vegetables are cooking, add your pasta into the boiling water.</li>
             <li>Once the vegetables become clarified, add in your ground beef.</li>
             <li>As the beef is cooking, add in tomato paste to taste and add in your chili powder, salt and pepper, and other seasonings of your choice.</li>
