Center text on index and beefmacaroni pages

--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>High Protein Meal Prep Ideas</title>
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
-        <h1>High Protein Meal Prep Ideas</h1>
+        <div class="center"><h1>High Protein Meal Prep Ideas</h1></div>
 
-        <p>Are you in a rush to go to work everyday?</p>
-        <p>Are you tired of eating boring old sandwiches?</p>
-        <p>Are you finding it hard to balance your nutrition goals with your 9-5?</p>
-        <p>Meal Prep Doesn't have to be boring! </p>
-        <p>Here are some high protein recipes that you can prepare in less than 2 hours that will save you time and money. </p>
-        <p>These recipes were designed to be dairy and nut free!</p>
-        <p><strong>All numerical figures in recipes are for demonstration purposes only and may not reflect actual quantities required for recipe or actual nutrition information.</strong></p>
-        <img src="https://media.tenor.com/18CbNzRW_FkAAAAM/smile-happy.gif" target="_blank" rel ="noopener norefferer">
-        <img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CJKHOK4DGFTT4JQZO2VHWU36WE.jpg&w=1200"
-                target = "_blank" rel ="noopener norefferer" height="220">
-        <h2>List of Recipes</h2>
-        <ul>
-            <li><a href="./recipes/beefmacaroni.html">Beef Macaroni</a></li>
-            <li><a href="./recipes/islandricebowl.html">Island Rice Bowl</a></li>
-            <li><a href="./recipes/steaknpotato.html">Steak and Potatoes</a></li>
-        </ul>
+        <div class="center"><p>Are you in a rush to go to work everyday?</p></div>
+        <div class="center"><p>Are you tired of eating boring old sandwiches?</p></div>
+        <div class="center"><p>Are you finding it hard to balance your nutrition goals with your 9-5?</p></div>
+        <div class="center"><p>Meal Prep Doesn't have to be boring! </p></div>
+        <div class="center"><p>Here are some high protein recipes that you can prepare in less than 2 hours that will save you time and money. </p></div>
+        <div class="center"><p>These recipes were designed to be dairy and nut free!</p></div>
+        <div class="center"><p><strong>All numerical figures in recipes are for demonstration purposes only and may not reflect actual quantities required for recipe or actual nutrition information.</strong></p></div>
+        <div class="center"><img src="https://media.tenor.com/18CbNzRW_FkAAAAM/smile-happy.gif" target="_blank" rel ="noopener norefferer"></div>
+        <div class="center"><img src="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/CJKHOK4DGFTT4JQZO2VHWU36WE.jpg&w=1200"
+            target = "_blank" rel ="noopener norefferer" height="220"></div>
+        <div class="center"><h2>List of Recipes</h2></div>
+            <div class="center"><a href="./recipes/beefmacaroni.html">Beef Macaroni</a></div>
+            <div class="center"><a href="./recipes/islandricebowl.html">Island Rice Bowl</a></div>
+            <div class="center"><a href="./recipes/steaknpotato.html">Steak and Potatoes</a></div>
     </body>
 </html>
