--- a/recipes/beefmacaroni.html
+++ b/recipes/beefmacaroni.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Beef and Macaroni</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Beef and Macaroni</h1>
-        <img src="https://www.simplyrecipes.com/thmb/O2-v8_hxlFR35nmH5udh8It0d2k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Hamburger-and-Macaroni-LEAD-01-bb45d144bbe64ca5a0bb15783ed6b204.jpg"
-        target="_blank" rel="noopener norefferer" height ="400" alt="Beef and Macaroni Dish">
-        <p><strong>Images are for illustration purposes only.</strong></p>
+        <div class="center"><h1>Beef and Macaroni</h1></div>
+        <div class="center"><img src="https://www.simplyrecipes.com/thmb/O2-v8_hxlFR35nmH5udh8It0d2k=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Hamburger-and-Macaroni-LEAD-01-bb45d144bbe64ca5a0bb15783ed6b204.jpg"
+        target="_blank" rel="noopener norefferer" height ="400" alt="Beef and Macaroni Dish"></div>
+        <div class="center"><p><strong>Images are for illustration purposes only.</strong></p></div>
         <h2>Description</h2>
         <p>What's up with all these meal prep recipes that call for mac and cheese? Ditch the dairy and make this delicious Beef and Macaroni instead.</p>
         <p>Each serving contains around 850 calories and 60 grams of protein.</p>
@@ -41,6 +42,6 @@
             <li>Distribute into five equal servings and enjoy!</li>
         </ol>
         <p>This meal lasts for up to four days in the fridge, and can be frozen. To reheat, microwave it for 2-3 minutes.</p>
-        <a href="../index.html"> Return to Main Page </a>
+        <div class="center"><a href="../index.html"> Return to Main Page </a></div>
     </body>
 </html>
